# ChangeLog file for java
# This file is updated with Maddlog

* Thu Oct  6 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected return values of DatabaseMetaData methods nullsAreSortedHigh(),
  nullsAreSortedLow(), getMaxCursorNameLength(), getMaxProcedureNameLength(),
  getMaxStatementLength() and getMaxUserNameLength().
  Improved return values of DatabaseMetaData methods getMaxBinaryLiteralLength(),
  getMaxCharLiteralLength() and getMaxColumnsInTable().
- Implemented Statement methods: getQueryTimeout() and setQueryTimeout(int
  seconds).  getQueryTimeout() used to always return 0, now it returns the
  query timeout retrieved from the server.  setQueryTimeout(int seconds)
  used to always throw SQLException: query time outs not supported.
  Now it sets the query timeout for the current connection/session on
  the server.

* Thu Sep 29 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected ResultSet methods: getByte(), getBigDecimal(), getShort(),
  getInt(), getLong(), getFloat() and getDouble() in case the conversion
  to the native type failed due to a Number Format conversion error.
  It used to silently ignore the conversion error and return 0 instead,
  which is not correct.  Now it throws an SQLException with message
  "Could not convert value to a number." and SQLstate "22003" meaning:
  Numeric value out of range.

* Thu Sep 22 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved JdbcClient program when doing dump of table definition.  It now
  outputs CREATE TABLE definition more similar to mclient program.

* Thu Sep 15 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved performance of following JDBC ResultSet and ResultSetMetaData
  methods:
  - ResultSet.getBoolean(column)
  - ResultSet.getBinaryStream(column)
  - ResultSet.getBytes(column)
  - ResultSet.getObject(column)
  - ResultSet.getObject(column, map)
  - ResultSet.getDate(column)