@@ -125,6 +125,7 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2016 MonetDB B.V.
     <antcall target="Test_Smoreresults" />
     <antcall target="Test_Int128" />
     <antcall target="Test_FetchSize" />
+    <antcall target="Test_Wrapper" />
     <antcall target="BugConcurrent_clients_SF_1504657" />
     <antcall target="BugConcurrent_sequences" />
     <antcall target="BugDatabaseMetaData_Bug_3356" />
@@ -142,7 +143,6 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2016 MonetDB B.V.
       <arg value="${jdbc_url}" />
     </java>
   </target>
-  
 
   <!-- convenience targets for the outside caller to specify which
   test(s) should be run -->
@@ -319,13 +319,19 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2016 MonetDB B.V.
       <param name="test.class" value="Test_Int128" />
     </antcall>
   </target>
-  
+
   <target name="Test_FetchSize">
     <antcall target="test_class">
       <param name="test.class" value="Test_FetchSize" />
     </antcall>
   </target>
-  
+
+  <target name="Test_Wrapper">
+    <antcall target="test_class">
+      <param name="test.class" value="Test_Wrapper" />
+    </antcall>
+  </target>
+
   <target name="BugConcurrent_clients_SF_1504657">
     <antcall target="test_class">
       <param name="test.class" value="BugConcurrent_clients_SF_1504657" />
